Improve API of m-LoRA (#74)
* update dummy data

* fix bugs, add test case

* format codes

* update notebook

* move misc codes into one folder

* update docs

--- a/misc/finetune-demo.ipynb
+++ b/misc/finetune-demo.ipynb
@@ -40,10 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! git clone https://github.com/mikecovlee/mLoRA\n",
-    "%cd mLoRA\n",
-    "! git pull\n",
-    "! pip install ."
+    "! pip install mlora"
    ]
   },
   {
@@ -103,8 +100,7 @@
     "    batch_size=16,\n",
     "    micro_batch_size=8,\n",
     "    learning_rate=1e-4,\n",
-    "    casual_data_path=\"data/dummy_data.json\",\n",
-    "    casual_prompt_template=\"template/alpaca.json\",\n",
+    "    casual_train_data=\"TUDB-Labs/Dummy-mLoRA\",\n",
     ").init(lora_config)\n",
     "\n",
     "mlora.train(model=model, tokenizer=tokenizer, configs=[train_config])"
@@ -123,15 +119,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_adapter(\"lora_0\")\n",
-    "\n",
     "generate_config = mlora.GenerateConfig(\n",
     "    adapter_name=\"lora_0\",\n",
-    "    prompt_template=\"template/alpaca.json\",\n",
-    "    prompts=[\"What is m-LoRA?\"],\n",
+    "    prompts=[\"Could you provide an introduction to m-LoRA?\"],\n",
+    "    stop_token=\"\\n\",\n",
     ")\n",
     "\n",
-    "output = mlora.generate(model=model, tokenizer=tokenizer, configs=[generate_config], max_gen_len=64)\n",
+    "output = mlora.generate(model=model, tokenizer=tokenizer, configs=[generate_config])\n",
     "\n",
     "print(output[\"lora_0\"][0])"
    ]
