[enhancement] refactoring for better usability (#87)

--- a/misc/finetune-demo.ipynb
+++ b/misc/finetune-demo.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "model = mlora.LLMModel.from_pretrained(\n",
     "    base_model,\n",
-    "    device=mlora.get_backend().default_device_name(),\n",
+    "    device=mlora.backend.default_device_name(),\n",
     "    load_dtype=torch.bfloat16,\n",
     ")\n",
     "tokenizer = mlora.Tokenizer(base_model)"
@@ -96,12 +96,13 @@
     "model.init_adapter(lora_config)\n",
     "\n",
     "train_config = mlora.TrainConfig(\n",
+    "    adapter_name=\"lora_0\",\n",
+    "    data_path=\"TUDB-Labs/Dummy-mLoRA\",\n",
     "    num_epochs=10,\n",
     "    batch_size=16,\n",
     "    micro_batch_size=8,\n",
     "    learning_rate=1e-4,\n",
-    "    casual_train_data=\"TUDB-Labs/Dummy-mLoRA\",\n",
-    ").init(lora_config)\n",
+    ")\n",
     "\n",
     "mlora.train(model=model, tokenizer=tokenizer, configs=[train_config])"
    ]
@@ -125,7 +126,9 @@
     "    stop_token=\"\\n\",\n",
     ")\n",
     "\n",
-    "output = mlora.generate(model=model, tokenizer=tokenizer, configs=[generate_config])\n",
+    "output = mlora.generate(\n",
+    "    model=model, tokenizer=tokenizer, configs=[generate_config], max_gen_len=128\n",
+    ")\n",
     "\n",
     "print(output[\"lora_0\"][0])"
    ]
